--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@ $(document).ready(function () {
 <li>Un ordinateur par personne</li>
 <li>Toute la documentation de la formation : www.github.com/datactivist/introR_ODF</li>
 </ul>
-<p>Pour le formateur : - préparer les démo</p>
+<p>Pour le formateur :</p>
+<ul>
+<li>préparer les démo</li>
+</ul>
 </div>
 <div id="les-etapes-de-la-formation" class="section level1">
 <h1>Les étapes de la formation :</h1>
@@ -80,8 +83,8 @@ $(document).ready(function () {
 <h2>Première démo :</h2>
 <p>Les participants renseignent le formulaire (<a href="http://frama.link/formationR" class="uri">http://frama.link/formationR</a>) qui demande des informations basiques sur les participants. Ce formulaire sert de démonstration des usages potentiels de R.</p>
 <p>Comment connecter un simple formulaire Google Form, ses données récoltées dans un tableur et les visualiser très simplement avec des petits modules de graphes ou de cartes sur une page HTML construite automatiquement.</p>
-<p>Le formateur a créé préalablement un code R qui permet de visualiser en temps réel un dashboard qui présente les résultats.</p>
-<p>Force de R : code simple et réduit (70 lignes), permet un traitement. Il faut une heure à 1,5 heure pour l’écrire.</p>
+<p>Le formateur a créé préalablement <a href="./dashboard.Rmd">un code R</a> qui permet de visualiser en temps réel <a href="./dashboard.html">un dashboard</a> qui présente les résultats.</p>
+<p>La force de R, c’est de permettre d’utiliser un code simple et concis (70 lignes dans ce cas). Il faut une heure à une heure et demi pour l’écrire.</p>
 </div>
 </div>
 </div>
