--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ $(document).ready(function () {
 </div>
 <div id="quest-ce-que-le-big-data" class="section level2">
 <h2>Qu’est ce que le big data ?</h2>
-<iframe src="http://giphy.com/embed/TnuKaZxbMbHhK" width="480" height="319" frameBorder="0" class="giphy-embed" allowFullScreen>
+<iframe src="https://giphy.com/embed/TnuKaZxbMbHhK" width="480" height="319" frameBorder="0" class="giphy-embed" allowFullScreen>
 </iframe>
 <p>
 <a href="https://giphy.com/gifs/TnuKaZxbMbHhK">via GIPHY</a>
@@ -246,7 +246,7 @@ $(document).ready(function () {
 <li>En tant que citoyen, déconstruire les algorithmes et se réapproprier les données qui servent à la décision publique</li>
 </ul>
 <p>Les données ne signifient rien à l’état brut. C’est un modèle qui permet de les interpréter : on fait des hypothèses sur le rapport des données avec la réalité et on donne du sens aux données pour confirmer/infirmer ce modèle.</p>
-<iframe src="http://giphy.com/embed/J14dxhoJLWlI4" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen>
+<iframe src="https://giphy.com/embed/J14dxhoJLWlI4" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen>
 </iframe>
 <p>
 <a href="https://giphy.com/gifs/J14dxhoJLWlI4">via GIPHY</a>
@@ -287,7 +287,7 @@ $(document).ready(function () {
 <li>ESRI, QGis, MapInfo (carto)</li>
 </ul>
 <p>Formats de données :</p>
-<iframe src="http://giphy.com/embed/jEEYJO9EgU5ig" width="480" height="265" frameBorder="0" class="giphy-embed" allowFullScreen>
+<iframe src="https://giphy.com/embed/jEEYJO9EgU5ig" width="480" height="265" frameBorder="0" class="giphy-embed" allowFullScreen>
 </iframe>
 <p>
 <a href="https://giphy.com/gifs/jEEYJO9EgU5ig">via GIPHY</a>
