fin journée bis

--- a/jour4.html
+++ b/jour4.html
@@ -128,6 +128,7 @@ Pad collaboratif : <a href="https://frama.link/formationR_pad4" class="uri">http
 <li class="fragment next"><code>x</code></li>
 <li class="fragment next"><code>y</code></li>
 <li class="fragment next"><code>colour</code></li>
+<li class="fragment next"><code>fill</code></li>
 <li class="fragment next"><code>size</code></li>
 <li class="fragment next">line width <code>lwd</code></li>
 <li class="fragment next">line type <code>lty</code></li>
