--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ $(document).ready(function () {
     <h2><a href="#content">Introduction aux outils d’analyse de données et à R</a></h2>
     <div id="text-table-of-contents">
       <ul>
+      <li><a href="#preambule">Préambule</a></li>
       <li><a href="#les-materiaux-necessaires-pour-cette-formation">Les matériaux nécessaires pour cette formation</a></li>
       <li><a href="#les-etapes-de-la-formation">Les étapes de la formation :</a><ul>
       <li><a href="#premiere-demo">Première démo :</a></li>
@@ -149,6 +150,19 @@ $(document).ready(function () {
 </div>
 
 <div id="main">
+<div id="preambule" class="section level1">
+<h1>Préambule</h1>
+<p>Cette documentation est le fruit d’un travail collaboratif, réalisé par les participants à <a href="http://www.datactivi.st/formation.html">la formation organisée par Open Data France et datactivi.st</a>. Un grand merci à eux !</p>
+<p>Elle accompagne les supports de formation suivants :</p>
+<ul>
+<li>les <a href="./jour1.html">slides de la première journée</a></li>
+<li>les <a href="./jour2.html">slides de la deuxième journée</a></li>
+<li>les <a href="./jour2.html">slides de la troisième journée</a></li>
+<li>le <a href="https://github.com/datactivist/IntroR_ODF/blob/master/script.R">script R</a> reprenant les principales manipulations de données effectuées durant ces trois jours.</li>
+</ul>
+<p>L’ensemble de ces matériaux peut être retrouvé sur le <a href="https://github.com/datactivist/IntroR_ODF">repo github dédié</a>.</p>
+<p>L’ensemble de ces matériaux est placé, sauf mention contraire, sous <a href="https://creativecommons.org/licenses/by-sa/4.0/">licence Creative Commons CC-BY-SA</a>.</p>
+</div>
 <div id="les-materiaux-necessaires-pour-cette-formation" class="section level1">
 <h1>Les matériaux nécessaires pour cette formation</h1>
 <ul>
