--- a/img/comm.couleur.html
+++ b/img/comm.couleur.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     
-    <script src='http://d3js.org/d3.v3.min.js' type='text/javascript'></script>
-    <script src='http://d3js.org/topojson.v1.min.js' type='text/javascript'></script>
+    <script src='https://d3js.org/d3.v3.min.js' type='text/javascript'></script>
+    <script src='https://d3js.org/topojson.v1.min.js' type='text/javascript'></script>
     <script src='./datamaps.all.min.js' type='text/javascript'></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js' type='text/javascript'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js' type='text/javascript'></script>
     
     <style>
     .rChart {
