--- a/index.html
+++ b/index.html
@@ -152,6 +152,16 @@ $(document).ready(function () {
 </div>
 
 <div id="main">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80486908-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <div id="preambule" class="section level1">
 <h1><span class="header-section-number">1</span> Préambule</h1>
 <p>Cette documentation est le fruit d’un travail collaboratif, réalisé par les participants à <a href="http://www.datactivi.st/formation.html">la formation organisée par Open Data France et datactivi.st</a>. Un grand merci à eux !</p>
