--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ $(document).ready(function () {
 <li>Nom des colonnes sur la 1ère ligne.</li>
 <li>Mettre le texte entre guillemets –&gt; HYPER IMPORTANT pour signifier que c’est du texte et non des valeurs numériques
 <ul>
-<li>Cas de la corse : codes départements interprétés comme valeurs numériques… mais le logiciel affiche “erreur” une fois arrivé à la Corse (2A, 2B)</li>
+<li>Cas de la Corse : codes départements interprétés comme valeurs numériques… mais le logiciel affiche “erreur” une fois arrivé à la Corse (2A, 2B)</li>
 </ul></li>
 <li>Les cellules fusionnées sont à gérer comme des cellules vides, comme les commentaires</li>
 <li>Voir le <a href="http://fr.slideshare.net/christophelibertidf/bonnes-pratiquesexcel-cc27juin2013">guide de Christophe Libert sur les fichiers CSV</a></li>
