--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 
 
 
-<title>Introduction aux outils d’analyse de données et à R</title>
+<title>Introduction aux outils d’analyse de données et à R - partie 2</title>
 
 <script src="index2_files/jquery-1.12.4/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -101,12 +101,12 @@ $(document).ready(function () {
 
 
 <div id="header">
-<h1 class="title">Introduction aux outils d’analyse de données et à R</h1>
+<h1 class="title">Introduction aux outils d’analyse de données et à R - partie 2</h1>
 </div>
 
 
 <div id="table-of-contents">
-    <h2><a href="#content">Introduction aux outils d’analyse de données et à R</a></h2>
+    <h2><a href="#content">Introduction aux outils d’analyse de données et à R - partie 2</a></h2>
     <div id="text-table-of-contents">
       <ul>
       <li><a href="#preambule"><span class="toc-section-number">1</span> Préambule</a></li>
