--- a/index_files/readthedown-0.1/readthedown.html
+++ b/index_files/readthedown-0.1/readthedown.html
@@ -66,7 +66,7 @@ $endfor$
 <!-- tabsets -->
 <script>
 $$(document).ready(function () {
-  window.buildTabsets("$idprefix$TOC");
+  window.buildTabsets("text-table-of-contents");
 });
 </script>
 
@@ -152,6 +152,7 @@ $$(document).ready(function () {
   $$('#content').magnificPopup({
 	      type:'image',
 	      closeOnContentClick: false,
+	      closeBtnInside: false,
 	      delegate: 'img',
 	      gallery: {enabled: $gallery$ },
 	      image: {
